# SDLCrossCompileExample

./: CMakeLists.txt  Toolchain-Ubuntu-mingw32.cmake  main.cpp
